// Copyright 2018 the orbs-network-typescript authors
// This file is part of the orbs-network-typescript library in the Orbs project.
//
// This source code is licensed under the MIT license found in the LICENSE file in the root directory of this source tree.
// The above notice should be included in all copies or substantial portions of the software.

syntax = "proto3";

import "primitives/transactions.proto";
import "primitives/gossip-listener.proto";
import "primitives/blocks.proto";

service BlockStorage {
  rpc AddBlock (AddBlockInput) returns (AddBlockOutput);
  rpc GetBlocks (GetBlocksInput) returns (GetBlocksOutput);
  rpc GetLastBlock (GetLastBlockInput) returns (GetLastBlockOutput);
  rpc HasNewBlocks (HasNewBlocksInput) returns (HasNewBlocksOutput);
  rpc GossipMessageReceived (GossipListenerInput) returns (GossipListenerOutput);
}

message AddBlockInput {
  Block block = 1;
}

message AddBlockOutput {
}

message GetBlocksInput {
  uint32 lastBlockHeight = 1;
  uint32 limit = 2;
}

message GetBlocksOutput {
  repeated Block blocks = 1;
}

message GetLastBlockInput {
}

message GetLastBlockOutput {
  Block block = 1;
}

message HasNewBlocksInput {
  uint32 blockHeight = 1;
}

message HasNewBlocksOutput {
  bool hasNewBlocks = 1;
}
